              reorderBFS() (which is available in all dimensions).
        Class Triangulation<4>:
            - New routine simplifyUpDown(); thanks to Rhuaidi Burke.
        Class Vector<T>:
            - Added support for tight encodings and decodings.
            - New routine hash(), which uses the tight encoding.
        Function foreach_constexpr():
            - New function to provide compile-time loops over a set of integers.
        Function gcdWithCoeffs():
            - Fixed an overflow error that occurred in the case b == LONG_MAX
              (and nowhere else), and highlighted in the docs that LONG_MIN
              may not be handled correctly (due to the inability to negate).
        Function modularInverse():
            - Now checks its preconditions and throws an exception if they fail.
            - Now explicitly allows (n,k) = (1,0); in the past this was
              supported but technically a violation of the preconditions.
            - Now takes arguments of type long (not unsigned long).
        Function reducedMod():
            - Now checks its preconditions and throws an exception if they fail.
        Constants is_cpp_integer_v<T>, is_unsigned_cpp_integer_v<T>:
            - New alternatives to using std::is_integeral_v<T> and
              std::is_unsigned_v<T> that allow for 128-bit integers also.
    PYTHON:
        - Updated the included pybind11 library from 2.10.0 to 2.10.4.
        - Improved the speed of iteration (specifically, throwing/catching
          StopIteration exceptions).
        - Rich flag types based on regina::Flags<...> (such as NormalAlg,
          CensusPurge, etc.) now support a bool() operator that tests for
          a non-empty flag set.
        - The underlying enum types for rich flags (e.g., NormalAlgFlags,
          CensusPurgeFlags, etc.) likewise now have a bool() operator that
          tests for a zero flag.  This is because zero flags play a special